[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/load_save/unknown.png" type="Texture" id=1]
[ext_resource path="res://fonts/OpenSansSemiBold.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/load_save/placeholder.gd" type="Script" id=3]
[ext_resource path="res://fonts/Small_SemiBold.tres" type="DynamicFont" id=4]
[ext_resource path="res://game/global/assets/edit-icon.png" type="Texture" id=5]
[ext_resource path="res://game/global/assets/delete-icon.png" type="Texture" id=6]
[ext_resource path="res://game/global/assets/delete-icon-focus.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.678431, 0.741176, 0.254902, 0.345098 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Game" type="HBoxContainer"]
margin_right = 2250.0
margin_bottom = 400.0
rect_min_size = Vector2( 2000, 400 )
focus_mode = 2
custom_constants/separation = 100
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thumbnail" type="TextureRect" parent="."]
margin_right = 750.0
margin_bottom = 400.0
rect_min_size = Vector2( 750, 400 )
texture = ExtResource( 1 )

[node name="Border" type="ColorRect" parent="Thumbnail"]
visible = false
modulate = Color( 0.843137, 1, 0.0901961, 1 )
show_behind_parent = true
margin_left = -5.0
margin_top = -5.0
margin_right = 755.0
margin_bottom = 405.0
rect_min_size = Vector2( 760, 410 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 850.0
margin_right = 2306.0
margin_bottom = 400.0
rect_min_size = Vector2( 1400, 400 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1456.0
margin_bottom = 400.0

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1456.0
margin_bottom = 88.0

[node name="Title" type="LineEdit" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_right = 1400.0
margin_bottom = 88.0
rect_min_size = Vector2( 1400, 0 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "????????"
max_length = 100
right_icon = ExtResource( 5 )
placeholder_alpha = 1.0
caret_blink = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 1408.0
margin_right = 1456.0
margin_bottom = 88.0

[node name="DeleteDialog" type="ConfirmationDialog" parent="MarginContainer/VBoxContainer/TitleContainer/CenterContainer"]
margin_left = -396.0
margin_top = -11.0
margin_right = 444.0
margin_bottom = 99.0
popup_exclusive = true
window_title = "Are you sure?"
dialog_text = "Are you sure you want to delete this save game. (THIS IS NOT REVERSIBLE)"

[node name="Delete" type="TextureButton" parent="MarginContainer/VBoxContainer/TitleContainer/CenterContainer"]
margin_top = 20.0
margin_right = 48.0
margin_bottom = 68.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 1456.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 2 )
text = "??-??-????"

[node name="Player_data" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 1456.0
margin_bottom = 271.0
text = "?????????????????????
?????????????????????
?????????????????????
?????????????????????"
[connection signal="focus_entered" from="." to="." method="_on_Game_focus"]
[connection signal="focus_exited" from="." to="." method="_on_Game_lost_focus"]
[connection signal="mouse_entered" from="." to="." method="_on_Game_mouse"]
[connection signal="mouse_exited" from="." to="." method="_on_Game_no_mouse"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/TitleContainer/Title" to="." method="_on_Title_text_entered"]
[connection signal="confirmed" from="MarginContainer/VBoxContainer/TitleContainer/CenterContainer/DeleteDialog" to="." method="_on_DeleteDialog_confirmed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleContainer/CenterContainer/Delete" to="." method="_on_Delete_pressed"]
